# rula

./: .gitignore  Cargo.toml  README.md
.github/: CovarageGraph.md
.github/workflows/: build_test.yaml  coverage.yaml  example_ci.yaml
RuLa-examples/: simple.rula
doc/: design.md  grammar.md  reserved.md  spec.md
examples/: config_generator.py  entanglement_swapping.rula  entanglement_swapping.toml  entanglement_swapping2.rula  purification.rula  simple.rula  single_purification.rula  single_purification.toml
examples/json/: current_ruleset_quisp.json
examples/topology_aware/: topology.json  topology_aware_entanglement_swapping.rula
examples/v2/: config.json  entanglement_swapping.rula  purification.rula  swapping_pur.rula
mock-components/: Cargo.toml
mock-components/src/: lib.rs
mock-components/src/hardware/: error.rs  mock_qnic.rs  mock_qubit.rs  nic.rs  qnic.rs  result.rs
mock-components/src/software/: mock_routing_daemon.rs  resource_allocator.rs
mock-hardware/: Cargo.toml
mock-hardware/src/: lib.rs
mock-hardware/src/hardware/: bsa.rs  error.rs  qnic.rs  qubit.rs  result.rs
rula/: Cargo.toml  build.rs
rula-derive/: Cargo.toml
rula-derive/src/: lib.rs
rula-exec/: Cargo.toml  README.md
rula-exec/src/: lib.rs
rula-exec/src/codegen/: builtin.rs  default_token.rs  error.rs  generator.rs  identifier.rs  rule_meta.rs  ruleset_generator.rs  test_generator.rs
rula-exec/src/generator/: error.rs  generator.rs  scope.rs  symbol_table.rs  types.rs
rula-exec/src/network/: qnic.rs  qnic_wrapper.rs
rula-exec/src/rulep/: README.md  action.rs  condition.rs  error.rs  ruleset.rs  ruleset_gen.rs
rula-exec/src/ruleset_gen/: action.rs  condition.rs  conf_parser.rs  error.rs  factory.rs  generator.rs  identifier.rs  repeater.rs  ruleset.rs  ruleset_generator.rs  symbol_table.rs  test_ruleset_generator.rs  tracker.rs  types.rs
rula-exec/src/wrapper/: qnic_wrapper.rs  qubit_wrapper.rs
rula-exec/tests/: codegen_test.rs  ir_gen_test.rs
rula-exec/tests/suppose/: interface_def.rs
rula-lib/: Cargo.toml
rula-lib/src/: lib.rs  message.rs  message_impl.rs  operation.rs  prelude.rs  qnic.rs  qubit.rs  result.rs  result_impl.rs  time.rs
rula-lib/src/ruleset/: action.rs  condition.rs  ruleset.rs
rula-parser/: Cargo.toml
rula-parser/examples/: if_expr.rula  pur.rula  swapping.rula
rula-parser/src/: lib.rs  parser.rs
rula-parser/src/parser/: ast.rs  error.rs  rula.pest  rula_old.pest
rula-parser/tests/: parse_test.rs
rula-runtime/: Cargo.toml
rula-runtime/src/: lib.rs
rula-runtime/src/codegen/: error.rs  expr.rs  generator.rs  program.rs
rula-runtime/src/monitor/: README.md
rula-runtime/src/network/: qnic.rs  qubit.rs
rula-runtime/src/rulep/: action.rs  condition.rs  ruleset.rs  ruleset_gen.rs
rula-runtime/src/utils/: qnic.rs
rula-runtime/tests/: codegen_test.rs
rula/src/: lib.rs  main.rs  parser.rs
rula/src/parser/: README.md  ast.rs  error.rs  lexer.rs  rula.lalrpop  rula.pest  rula.rs  token.rs
rula/tests/: parse_test.rs
ruleset-ir/: Cargo.toml
ruleset-ir/src/: instructions.rs  lib.rs  types.rs
src/: main.rs
tests/: RuLa_test.sh
tests-e2e/: Cargo.toml
tests-e2e/tests/: e2e_codegen_test.rs  e2e_rulesetgen_test.rs  generator.rs  generator_purification.rs  generator_swapping.rs  generator_swapping_purification.rs  purification.rs  rulesetgen_test.rs  test.rs  test3.rs
tests-rulesetgen/: Cargo.toml
tests-rulesetgen/src/: lib.rs
tests-rulesetgen/tests/: rulesetgen_test.rs
