[package]
name = "rula-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rula = { path = "../rula" }
# (rula_ast -> rula_program(rust syntax tree) -> quote -> rust_source)
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
proc-macro2 = "1.0"
tokio = {version = "1.20.1", features = ["rt", "rt-multi-thread", "net", "time", "io-std", "io-util"]}

# To generate ruleset json
serde_json = "1.0"
serde = "1.0"
pnet_datalink = "0.31.0"

[dependencies.pnet]
version = "0.31.0"

[dev-dependencies]
tokio = {version = "1.20.1", features = ["test-util"]}
cargo-tarpaulin = "0.20.1"

[features]
# If this is ci run, omit file generation
ci = []
no-format = []
gen-ruleset = []

[env]
RULE_OUR_DIR = ""

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # For serialization
]

