[package]
name = "rula-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rula = { path = "../rula" }
# (rula_ast -> rula_program(rust syntax tree) -> quote -> rust_source)
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
proc-macro2 = "1.0"
tokio = {version = "1.20.1", features = ["rt", "rt-multi-thread", "net", "time", "io-std", "io-util"]}

[dev-dependencies]
tokio = {version = "1.20.1", features = ["test-util"]}

[features]
# If this is ci run, omit file generation
ci = []
no-format = []