[package]
name = "rula-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rula = { path = "../rula" }
# (rula_ast -> rula_program(rust syntax tree) -> quote -> rust_source)
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
proc-macro2 = "1.0"
tokio = {version = "1.20.1", features = ["rt", "rt-multi-thread", "net", "time", "io-std", "io-util"]}

# To generate ruleset json
serde_json = "1.0"
serde = "1.0"

[dev-dependencies]
tokio = {version = "1.20.1", features = ["test-util"]}
cargo-tarpaulin = "0.20.1"

[features]
# If this is ci run, omit file generation
ci = []
no-format = []