[package]
name = "rula"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.8"
regex="1"
phf = { version = "0.10.1", features = ["macros"] }

[build-dependencies]
lalrpop = "0.19.8"