[package]
name = "rula"
version = "0.1.0"
edition = "2021"
description = "Bootstrap of rula compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
toml = "0.5.9"
proc-macro2 = "1.0"
# serde = "1.0"
rula-parser = {path="../rula-parser"}
rula-exec = {path="../rula-exec"}
