[package]
name = "tests-rulesetgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "generator"
# path = "tests/generator.rs"

[dependencies]
rula = {path = "../rula"}
rula-parser = { path = "../rula-parser" }
rula-exec = {path="../rula-exec"}
rula-lib = {path="../rula-lib"}

once_cell = "1.15.0"
itertools = "0.10.5"
proc-macro2 = "1.0"
futures = "0.3.25"
toml = "0.5.9"
serde = "1.0"
serde_json = "^1.0.41"
log = "0.4.17"
tokio = {version = "1.20.1", features = ["rt", "rt-multi-thread", "net", "time", "io-std", "io-util"]}