[package]
name = "tests-rulesetgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rula = {path = "../rula"}
rula_parser = { path = "../rula-parser" }
rula-exec = {path="../rula-exec"}
mock_components = {path = "../mock-components"}